--- a/assets/css/style-afiliacion.css
+++ b/assets/css/style-afiliacion.css
@@ -11,6 +11,7 @@
   --taylored: #7f8040;
   --wagon: #24697d;
   --secundary: #606060;
+  --gray:#cbd5e1;
 }
 
 body {
@@ -69,9 +70,10 @@ select {
   outline: 0;
   /*padding: 15px;*/
   width: 100%;
-  background-color: #e8eeef;
+  /*background-color: #e8eeef;*/
   color: #8a97a0;
-  box-shadow: 0 1px 0 rgba(0,0,0,0.03) inset;
+  box-shadow: 0 1px 0 rgba(0,0,0,0.09) inset;
+  border: 1px solid var(--gray);
   margin-bottom: 30px;
 }
 
@@ -79,12 +81,13 @@ input[type="radio"],
 input[type="checkbox"] {
   margin: 0 4px 8px 0;
 }
-
+/*
 select {
   padding: 6px;
   height: 32px;
   border-radius: 2px;
 }
+*/
 
 button {
   padding: 19px 39px 18px 39px;
@@ -174,24 +177,7 @@ h1 {
   text-align: center;
 }
 
-input[type="text"],
-input[type="email"],
-input[type="number"],
-select {
-  background: rgba(255,255,255,0.1);
-  border: none;
-  font-size: 16px;
-  height: 40px;
-  margin: 0;
-  outline: 0;
-  padding: 15px;
-  width: 100%;
-  background-color: #e8eeef;
-  color: #8a97a0;
-  box-shadow: 0 1px 0 rgba(0,0,0,0.03) inset;
-  margin-bottom: 30px;
-  border-radius: 10px;
-}
+
  
 select {
   padding: 6px;
